fix z-index for header

--- a/css/header.css
+++ b/css/header.css
@@ -19,6 +19,7 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 2px solid #2a9d8f;
+    z-index: 2;
 }
 
 .brand-link {
